Fixed footer alignment

--- a/templates/assets/css/default.css
+++ b/templates/assets/css/default.css
@@ -52,7 +52,8 @@ footer ul {
 	list-style: none;
     margin: 0 auto 0 auto;
     padding: 20px 0 20px 0;
-    width: 190px;	
+    width: 30%;	
+    text-align: center;
 }
 
 footer nav {
